--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DING_DING_APP_ID=1172735235
+DING_DING_APP_APP_KEY=dingntpij91knxszmfnc
+DING_DING_APP_APP_SECRET=Wil--yri8szkjH5SlJoqYIla-p3TssznE0X34x3-Bi8UUR4F2PyLHhMTXmV5psKb
+DING_DING_APP_CORP_ID=ding9bf4f9f52c016012bc961a6cb783455b
